--- a/threetier.yaml
+++ b/threetier.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: "mohanraz81/synthreetierbackend"
+          image: "nilesh13/backend"
           ports:
             - name: http
               containerPort: 80
@@ -76,7 +76,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: "mohanraz81/synthreetierfront"
+        image: "nilesh13/ubsfrontend"
         ports:
           - name: http
             containerPort: 80
