--- a/createdb.yaml
+++ b/createdb.yaml
@@ -5,7 +5,7 @@
       ec2_group:
         name: dbsg
         description: an example EC2 group
-        vpc_id: vpc-a3ae7bd9
+        vpc_id: vpc-039b88bca0ec3e62f
         region: us-east-1
         rules:
           - proto: tcp
@@ -21,8 +21,8 @@
         name: dbsubnet
         description: My Fancy Ex Parrot Subnet Group
         subnets:
-          - subnet-c1bb03a6
-          - subnet-58951276
+          - subnet-0eb700b7e046c3bb8
+          - subnet-0e5244b028ba7446d
       register: dbsubnet
     - debug:
         var: dbsubnet
